--- a/Telemetry/package.json
+++ b/Telemetry/package.json
@@ -18,6 +18,7 @@
     "react-indexed-db-hook": "^1.0.14",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
